# contextlint

./: .gitignore  README.md  pyproject.toml
examples/: contextlint.toml  good-claude-md.toml
src/contextlint/: __init__.py  analyze.py  cli.py  config.py  defaults.py  discover.py  imports.py  llm.py  models.py  report.py  rules.py  score.py  snapshot.py  state.py  tokens.py
tests/: test_contextlint.py
